--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextadmingithubstarter",
+  "name": "dashboardadminrehabilitasisosia",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@next/eslint-plugin-next": "14.0.1",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.2",
     "next": "14.0.1",
     "react": "18",
-    "react-dom": "18"
+    "react-dom": "18",
+    "react-icons": "^5.4.0",
+    "recharts": "^2.15.0",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "eslint": "8",
