--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/eslint-plugin-next": "14.0.1",
+    "bcrypt": "^5.1.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
     "next": "14.0.1",
